--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Riza Karadag (man, 38)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>stowaway, died in airplane bound for the USA, was asylum seeker in the Netherlands</b><br>Source: IRR<br>
+Found dead: <b>05/11/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found dead on coast of Nador (MA) near the Spanish enclave of Melilla (ES)</b><br>Source: AFP<br>
 
 <br>
 
