--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/05/00</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned near Laayoune (EH) after small boat capsized on way to Canary Islands (ES)</b><br>Source: taz<br>
+Found dead: <b>06/03/16</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N. (10 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat bound for Greece capsized off coast of Turkey with 10 children aboard</b><br>Source: HurriyetDN/AA/AP/Independent<br>
 
 <br>
 
