--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/05/08</b><br>Number of person: <b>47</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of starvation and cold after boat engine broke in the Mediterranean Sea off coast of Tunisia</b><br>Source: Reu./Ftcr/EP/NOB<br>
+Found dead: <b>02/05/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moncef (man, 25)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide, in Zurich (CH) awaiting pending deportation</b><br>Source: WSWS/Bildung fur alle/Libertare aktion/WOZ<br>
 
 <br>
 
