--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 06</b><br>Number of person: <b>50</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat that landed in Yoff (SN) after trying to reach Spain</b><br>Source: MNS/APDHA<br>
+Found dead: <b>19/09/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 13)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>jumped from church tower in Villach (AT) out of fear of deportation</b><br>Source: DerStandard<br>
 
 <br>
 
