--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/04/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mourad Jlassi (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>went missing in the Mediterranean Sea while trying to reach Europe from Aouled al-Mabrouk (TN)</b><br>Source: Ftcr/HNS/CPD<br>
+Found dead: <b>09/07/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bernard Hukwa (man)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>suicide, in the River Thames (GB) while waiting for asylum claim to be processed</b><br>Source: IRR/ZimEye<br>
 
 <br>
 
