--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/11/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Saar Yatta (man, 30)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found dead near coast of the Spanish enclave of Ceuta (ES)</b><br>Source: VDG<br>
+Found dead: <b>23/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, hit by truck in Calais (FR) while trying to reach Great Britain</b><br>Source: Vivre<br>
 
 <br>
 
