--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Chulun Liua (woman, 51)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>fell into coma and died after jumping out of window in Paris (FR) to avoid police raid</b><br>Source: MNS/PICUM/IRR<br>
+Found dead: <b>10/09/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 32)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned, found at border between Playa de la Hípica (ES) and Beni Ensar (MA)</b><br>Source: APDHA<br>
 
 <br>
 
