--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Rwanda</b><br>Cause of death: <b>died in border prison in southeast Amsterdam (NL) following serious illness and no medical care</b><br>Source: VK<br>
+Found dead: <b>18/05/99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaways, suffocated in Moroccan truck near French-Belgian border</b><br>Source: MNS<br>
 
 <br>
 
