--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>India</b><br>Cause of death: <b>died in forest near Varena (LT) while trying to enter Lithuania</b><br>Source: MNS<br>
+Found dead: <b>14/09/16</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (2 children; 2 women)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>reportedly went missing while crossing the Danube River (BG) on boat to Romania</b><br>Source: LeCourrierdesBalkans<br>
 
 <br>
 
