--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/01/09</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Libya</b><br>Cause of death: <b>reportedly froze to death while sailing from Libya to Lampedusa (IT)</b><br>Source: LR/CDS<br>
+Found dead: <b>12/10/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±20)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, electrocuted while trying to exit freight train in Wembley (GB)</b><br>Source: IRR<br>
 
 <br>
 
