--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/02/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sarkawat Hussein (man, 18)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>crushed while trying to climb into truck in Calais (FR) ferry terminal to get to Great Britain</b><br>Source: AFP/MNS/NO<br>
+Found dead: <b>03/08/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Johnson O. (man, 19)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>jumped from court house window in Vienna (AT) after asylum claim was rejected</b><br>Source: MNS/Malmoe<br>
 
 <br>
 
