--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Dec 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned while trying to swim away in the Aegean Sea from a deserted island near Turkish coast</b><br>Source: WB<br>
+Found dead: <b>06/06/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 6)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after boat sank with 22 migrants on board approximately 2.5 km from Samos (GR)</b><br>Source: PICUM/KI/NCAs/ST/MNS/FE/NOB/TP<br>
 
 <br>
 
