--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Dembo Fofana (man, 28)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>drowned in the Seine River (FR) after escaping from police, he was undocumented</b><br>Source: Parisen<br>
+Found dead: <b>30/04/18</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (1 baby; 5 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies recovered in Zuwara (LY)</b><br>Source: IOM Libya<br>
 
 <br>
 
