--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/11/14</b><br>Number of person: <b>24</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Syria</b><br>Cause of death: <b>drowned after boat on way to Bulgaria/Romania capsized in Black Sea near Turkey</b><br>Source: HurriyetDN/NRC/Mail Online/Alakhbar/NU/VK<br>
+Found dead: <b>10/11/04</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Mauritania</b><br>Cause of death: <b>drowned after boat travelling from Africa capsized in the Aegean Sea</b><br>Source: MNS/NOB<br>
 
 <br>
 
