--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/09/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 woman, ±23; 1 man, ±23)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned while trying to swim from Morocco to the Spanish enclave of Ceuta (ES)</b><br>Source: MNS<br>
+Found dead: <b>11/03/05</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>found dead on boat travelling from Morocco to Spain</b><br>Source: MAG/MNS<br>
 
 <br>
 
