--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/01/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Son Ha Hoang (man, 25)</b><br>Region of origin: <b>Vietnam</b><br>Cause of death: <b>suicide, set himself on fire in Ramersdorf in Munich (DE) after asylum claim was rejected</b><br>Source: IRR/CARF/ESG/SP/FR-NRW/ProAsyl/ZAG<br>
+Found dead: <b>Oct 02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>disappeared after boat carrying 42 migrants sank off coast of Barbate (ES)</b><br>Source: IRR<br>
 
 <br>
 
