--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/08/08</b><br>Number of person: <b>35</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat travelling from Morocco to Almería (ES); 25 survivors</b><br>Source: BBC/NYtimes/GuardianUn./PICUM/MSN/NOB<br>
+Found dead: <b>Aug 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lamis Abounahi (woman, 30)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died in Samos (GR) after being abandoned by traffickers and neglected by authorities</b><br>Source: MNS/Infomob/Roarmag<br>
 
 <br>
 
