--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lamis Abounahi (woman, 30)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died in Samos (GR) after being abandoned by traffickers and neglected by authorities</b><br>Source: MNS/Infomob/Roarmag<br>
+Found dead: <b>15/09/15</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N. (4 children; 11 women; 7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when boat capsized off Bodrum (TR) while trying to reach Kos (GR)</b><br>Source: Irish Times/Reu./DHA/Ya.N/Clandestina/AFP<br>
 
 <br>
 
