--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/12/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 man; 1 woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaways, died inside cargo container on vessel heading to Canada from Italy</b><br>Source: MNS/AFP<br>
+Found dead: <b>Dec 02</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>stowaways, found dead in shipping container due to depart from Livorno (IT)</b><br>Source: IRR<br>
 
 <br>
 
