--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/05/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Adams Bagna (man, 31)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died due to lack of medical care for chronic asthma (DE)</b><br>Source: Indymedia/Karawane<br>
+Found dead: <b>Jan 97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tarek Ben Abdelatif Refgui (m, 27)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died of head injuries while trying to land in Lampedusa (IT) with group of refugees</b><br>Source: ILM/IRR<br>
 
 <br>
 
