--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/01/16</b><br>Number of person: <b>48</b><br>Name, gender, age: <b>N.N. (11 children; 17 women)</b><br>Region of origin: <b>Syria, Iraq</b><br>Cause of death: <b>38 drowned after boat from Turkey sank off Kalolimnos (GR); 10 missing, 32 rescued</b><br>Source: AP/NYtimes/INDie/Watch TheMed<br>
+Found dead: <b>01/11/12</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>19 bodies found off coast of Tangier (MA) over 2 weeks; 2 missing</b><br>Source: AFP/FE<br>
 
 <br>
 
