--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Pierre Palmaba Kabamba (man, 61) Congo</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>jumped out of 5th floor window of induction centre for asylum seekers in Margate (GB)</b><br>Source: IRR<br>
+Found dead: <b>2001</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned in the Aegean Sea while travelling from Turkey to Lesbos (GR)</b><br>Source: Den Blanken<br>
 
 <br>
 
