--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/05/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Conrad Dixon (man, 40)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>suicide, set himself on fire in James Brindley Close, Stoke-on-Trent (GB) after claim for asylum was rejected</b><br>Source: Se/IRR<br>
+Found dead: <b>16/04/13</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N. (2 children; 3 women; 6 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after boat capsized near Al Hoceima (MA); 23 rescued, 1 died on way to hospital</b><br>Source: DNE/AlArabia<br>
 
 <br>
 
