--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/03</b><br>Number of person: <b>37</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned during shipwreck in bay of Cádiz (ES), bodies washed ashore</b><br>Source: ST/MNS/Indymedia/VK/AP/GuardianUn./Trouw<br>
+Found dead: <b>30/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>died of carbon monoxide poisoning from camp stove fumes at Moria refugee camp on Lesbos (GR)</b><br>Source: Reu./Newsweek/KI/Sputnik<br>
 
 <br>
 
