--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 07</b><br>Number of person: <b>59</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>56 drowned or died of hunger on way to Canary Islands (ES), 3 died upon landing in La Güera (EH)</b><br>Source: EP/Medios<br>
+Found dead: <b>24/09/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 30)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>hit by freight train near Port of Calais (FR) trying to get to Great Britain</b><br>Source: MNS<br>
 
 <br>
 
