--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of starvation, found in dinghy near coast of Palermo (IT)</b><br>Source: ANSA/LR/Unita/MP/Alicenews<br>
+Found dead: <b>Jun 00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>stowaways, found dead on Maltese freighter, reportedly suffocated or poisoned</b><br>Source: MUGAK<br>
 
 <br>
 
