--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/01/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rojg Nesarajah (boy, 2)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>killed in fire started by his mother in a refugee centre in Førde (NO) after her asylum was rejected; she also died</b><br>Source: NRK<br>
+Found dead: <b>06/10/09</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Somalia</b><br>Cause of death: <b>4 drowned trying to swim alongside a dinghy off coast of Gela (IT); 3 missing</b><br>Source: PICUM/EveryOne Group/NOB<br>
 
 <br>
 
