--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/11/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 boy, 6; 1 woman, 66)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>killed at refugee detention centre in Lesbos (GR) in a fire started by cooking gas canister</b><br>Source: Independent<br>
+Found dead: <b>01/10/94</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in the Mediterranean Sea before reaching Pantelleria (Italy)</b><br>Source: ILM/IRR<br>
 
 <br>
 
