--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/03/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 22)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>asylum seeker, shot in head by police chasing his car near Bad Endorf (DE)</b><br>Source: taz/CARF/IRR/ZAG<br>
+Found dead: <b>28/10/15</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after wooden boat sank near Lesbos (GR); 242 rescued</b><br>Source: IOM/Reu./UNHCR<br>
 
 <br>
 
