--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/06/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in detention centre in Caltanissetta (IT) after being refused medical care</b><br>Source: PICUM/TL<br>
+Found dead: <b>14/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Peter Q.</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>died after spending 3 months in a coma following police interrogation in Antwerp (BE)</b><br>Source: De Stoop<br>
 
 <br>
 
